force-app/main/default/objects/leankor__Dependency__c/leankor__Dependency__c.object-meta.xml
<CustomObject>
    <description>This object holds the defined predecessor or successor dependencies between two or more KanbanCard objects.</description>
    <label>Dependency</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>