force-app/main/default/objects/leankor__Dependency__c/fields/leankor__IsDependencyRecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsDependencyRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recalculate due to a change in dependency schedule.</description>
    <inlineHelpText>Recalculate due to a change in dependency schedule.</inlineHelpText>
    <label>Recalculate Dependency</label>
    <type>Checkbox</type>
</CustomField>