force-app/main/default/objects/leankor__Dependency__c/fields/leankor__LagLead__c.field-meta.xml
<CustomField>
    <fullName>leankor__LagLead__c</fullName>
    <label>LagLead</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>