force-app/main/default/objects/leankor__Dependency__c/fields/leankor__LagLeadDuration__c.field-meta.xml
<CustomField>
    <fullName>leankor__LagLeadDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LagLeadDuration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>