force-app/main/default/objects/leankor__Dependency__c/fields/leankor__LagLeadUnit__c.field-meta.xml
<CustomField>
    <fullName>leankor__LagLeadUnit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LagLeadUnit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>