force-app/main/default/objects/leankor__Dependency__c/fields/leankor__Predecessor__c.field-meta.xml
<CustomField>
    <fullName>leankor__Predecessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Predecessor</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Dependencies (Predecessor)</relationshipLabel>
    <relationshipName>PredecessorDependencies</relationshipName>
    <type>Lookup</type>
</CustomField>