force-app/main/default/objects/leankor__Dependency__c/fields/leankor__Successor__c.field-meta.xml
<CustomField>
    <fullName>leankor__Successor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>SuccessorDependencies</relationshipName>
    <type>Lookup</type>
</CustomField>