force-app/main/default/objects/leankor__Dependency__c/fields/leankor__SuccessorType__c.field-meta.xml
<CustomField>
    <fullName>leankor__SuccessorType__c</fullName>
    <label>Successor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start To Start</fullName>
                <default>true</default>
                <label>Start To Start</label>
            </value>
            <value>
                <fullName>Start To Finish</fullName>
            </value>
            <value>
                <fullName>Finish To Start</fullName>
            </value>
            <value>
                <fullName>Finish To Finish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>